added text_kr, and small changes

--- a/content/2019-01-22-marriage.md
+++ b/content/2019-01-22-marriage.md
@@ -840,7 +840,7 @@ tags:
                 </div>
             </p>
         </div>
-        <div class="conetent2">
+        <div class="content2">
             <div class="id">
                 140. ID: <span>8yo</span> 
                 <span title="2019/01/21 00:12:02">
