--- a/content/2019-02-02-marriage.md
+++ b/content/2019-02-02-marriage.md
@@ -1,5 +1,5 @@
 ---
-title: 결혼은 하고싶지 않지만 아이는 가지고싶은 녀석www
+title: 결혼은 하고싶지 않지만 아이는 갖고싶은 녀석www
 date: 2019-02-02T05:20:21.357Z
 cover: /assets/jeremy-wong-weddings-602196-unsplash.jpg
 slug: 20190122misc01
