--- a/content/2019-02-04-hashi-kan.md
+++ b/content/2019-02-04-hashi-kan.md
@@ -6,6 +6,7 @@ slug: 20190204-hasimoto-kanna
 category: 잡담
 tags:
   - 잡담
+  - 연예인
 ---
 <div><img src="/assets/20190204-hasimoto-kanna/0.5.png" alt="하시모토 칸나" title="하시모토 칸나"><p>출처: <a class="vglnk" href="https://hayabusa.open2ch.net/test/read.cgi/livejupiter/1549163037/" rel="nofollow noopener noreferrer" target="_blank"><span>https</span><span>://</span><span>hayabusa</span><span>.</span><span>open2ch</span><span>.</span><span>net</span><span>/</span><span>test</span><span>/</span><span>read</span><span>.</span><span>cgi</span><span>/</span><span>livejupiter</span><span>/</span><span>1549163037</span><span>/</span></a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">qnV</span> <span title="2019/02/03(日)12:03:57">2019/02/03 12:03</span></div><div style="padding-top: 10px;"><p class="content">여자 아이는 20 넘으면 안 돼<sup>(アカン)</sup><br><span class="jp">女の子は20過ぎたらアカン</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>oYN</span> <span title="2019/02/03(日)12:04:36">2019/02/03 12:04</span></div><div style="padding-top: 10px;"><p class="content">근데 너 벌써 40 넘었잖아<br><span class="jp">でもお前もう40越えてるやん</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">3. ID: <span>mQV</span> <span title="2019/02/03(日)12:05:12">2019/02/03 12:05</span></div><div style="padding-top: 10px;"><p class="content">그레고리력을 개정한다<br><span class="jp">グレゴリオ暦を改訂する</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">4. ID: <span>FJq</span> <span title="2019/02/03(日)12:05:23">2019/02/03 12:05</span></div><div style="padding-top: 10px;"><p class="content">시간을 멈추는 거야<br><span class="jp">時を止めるんや</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>Qpt</span> <span title="2019/02/03(日)12:05:36">2019/02/03 12:05</span></div><div style="padding-top: 10px;"><p class="content">고양이 나이로 한다<br><span class="jp">猫年齢にする</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>WIr</span> <span title="2019/02/03(日)12:05:39">2019/02/03 12:05</span></div><div style="padding-top: 10px;"><p class="content">목숨을 잃게한다면...?<br><span class="jp">命を落とせば…？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>9RW</span> <span title="2019/02/03(日)12:06:08">2019/02/03 12:06</span></div><div style="padding-top: 10px;"><p class="content">18살이라는 것으로 해서 다시 데뷔<br><span class="jp">18歳ってことにして再デビュー</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">11. ID: <span>BGc</span> <span title="2019/02/03(日)12:06:53">2019/02/03 12:06</span></div><div style="padding-top: 10px;"><p class="content">빛보다 빠른 속도로 운반하면 하시칸<sup>(하시모토 칸나)</sup>을 젊어지게 할 수 있을까?<br><span class="jp">光より早い速度で運べばハシカンを若返らせられる？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>Jgi</span> <span title="2019/02/03(日)12:06:53">2019/02/03 12:06</span></div><div style="padding-top: 10px;"><p class="content">연령 비공개로 하자<br><span class="jp">年齢非公開にしよう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">14. ID: <span class="op">qnV</span> <span title="2019/02/03(日)12:07:29">2019/02/03 12:07</span></div><div style="padding-top: 10px;"><p class="content">미소녀잖아?
 (20), (21),...라니 아무리 생각해도 이상하잖아<br><span class="jp">美少女やぞ？
