--- a/content/2019-02-06-quotes.md
+++ b/content/2019-02-06-quotes.md
@@ -64,7 +64,7 @@ by,誰か</span> </p></div></div></div><div class="commentbox1"><div class="cont
 윌리엄 셰익스피어<br><span class="jp">臆病者は、本当に死ぬまでに幾度も死ぬが、勇者は一度しか死を経験しない。
 ウィリアム・シェイクスピア</span> </p></div><div class="content2"><div class="id">42. ID: <span>6UDSGKP0x.net</span> <span title="2019/02/04(月) 02:47:21.349">2019/02/04 02:47</span></div><div style="padding-top: 10px;"><p class="content">이것은 좋군<br><span class="jp">これは良いね</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">43. ID: <span class="op">X6MtoLQV0.net</span> <span title="2019/02/04(月) 02:47:22.769">2019/02/04 02:47</span></div><div style="padding-top: 10px;"><p class="content">여러가지 준비한다곤 했는데 의외로 몇개 없었네
 덧붙여 이 중에서 내가 가장 격려받은 명언은 시어도어 루스벨트의 것이다.
-특히 이 한 문장「그 인물은, 승리와 패배도 모르는 겁쟁이들과는 선을 긋고 있다.」는, 꽤 와닿는 것이 있었다
+특히 이 한 문장「그 인물은, 승리도 패배도 모르는 겁쟁이들과는 선을 긋고 있다.」는, 꽤 와닿는 것이 있었다
 뭐 너희들도 하나쯤은 자신의 마음의 버팀목이 될것같은 걸 가지면 좋다고 생각해<br><span class="jp">色々と要したつもりだったけど意外と数なかったな
 因みにこの中で俺が一番励まされた名言はセオドア・ルーズベルトの奴だ
 特にこの一文「その人物は、勝利も敗北も知らない臆病者たちとは一線を画している。 」はかなり来たものがあった
