custom postcover position & gatsby Img tag (<Img />) used

--- a/content/2019-02-06-quotes.md
+++ b/content/2019-02-06-quotes.md
@@ -1,12 +1,13 @@
 ---
 title: 심심하니까 내가 정신적으로 위험했을 때 마음의 지지가 됐던 명언을 몇가지 소개할게
 date: 2019-02-06T11:05:32.400Z
-cover: /assets/20190206/20190206-quotes1.jpg
+cover: 20190206/20190206-quotes1.jpg
 slug: 20190206-quotes
 category: 잡담
 tags:
   - 잡담
   - 명언
+backgroundPosition:
 ---
 <div><p class="source">출처: <a href="http://viper.2ch.sc/test/read.cgi/news4vip/1549213500/" rel="nofollow noopener noreferrer" target="_blank"><span>http</span><span>://</span><span>viper</span><span>.</span><span>2ch</span><span>.</span><span>sc</span><span>/</span><span>test</span><span>/</span><span>read</span><span>.</span><span>cgi</span><span>/</span><span>news4vip</span><span>/</span><span>1549213500</span><span>/</span></a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">X6MtoLQV0.net</span> <span title="2019/02/04(月) 02:05:00.442">2019/02/04 02:05</span></div><div style="padding-top: 10px;"><p class="content">칭찬할 값어치가 있는건, 실제로 행동한 인물이며, 땀과 피로 범벅, 용감히 싸우고, 몇번이고 잘못을 저질러 성공에까지 손이 닿지 못한 인물이든지, 열의를 갖고 몸을 바쳐, 의의있는 목표를 향해 전력을 다해, 비록 실패했다 할지라도 과감하게 도전한 인물이다.
 그 인물은, 승리도 패배도 모르는 겁쟁이들과는 선을 긋고 있다.
