--- a/content/2019-02-11-germany.md
+++ b/content/2019-02-11-germany.md
@@ -1,12 +1,13 @@
 ---
 title: 【국제】독일인의 42% 「중국은 미국보다 신뢰할 수 있는 파트너」라고 응답
 date: 2019-02-11T15:23:00.400Z
-cover: /assets/20190211/2019021101.jpg
+cover: 20190211/2019021101.jpg
 slug: 20190211-germany
 category: 국제
 tags:
   - 독일
   - 뉴스
+backgroundPosition:
 ---
 <div><p class="source">출처: <a href="http://ai.2ch.sc/test/read.cgi/newsplus/1549851214/" target="_blank" rel="noopener nofollow noreferrer">http://ai.2ch.sc/test/read.cgi/newsplus/1549851214/</a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">eAo9qYil9.net</span> <span title="2019/02/11(月) 11:13:34.07">2019/02/11 11:13</span></div><div style="padding-top: 10px;"><p class="content">2019년 2월 11일, 중국 환구시보(전자판)는, 독일인의 절반 가까이가 「중국은 미국보다 신뢰할 수 있는 파트너」로 생각하고 있는 것으로 최근 여론조사에서 드러났다고 보도했다.
 독일의 방송국 도이체 벨레(전자판)의 9일자 보도로서 전한 것으로, 「전통적으로 미국편」인 독일의 비영리 단체 Atlantik-Brucke와 연구기관 Civey가 공동으로 실시한 조사에 의하면, 응답자 5000명 중, 57.6%가 「독일은 미국과 좀 더 거리를 둬야 한다」라고 한 것에 대해, 「미국에 더 가까워져야 한다」라고 한 것은 13%에 머물러, 응답자의 85%는 현재의 미독 관계를 부정적으로 평가해, 42.3%가 「중국은 미국보다 신뢰 할 수 있는 파트너」라고 응답했다고 한다.
