--- a/content/2019-02-15-onepiece.md
+++ b/content/2019-02-15-onepiece.md
@@ -1,12 +1,13 @@
 ---
 title: 옛날 나 「미호크와 호각이라든지 샹크스 대단해」→지금 나 「상크스와 호각이라든지 미호크 대단해」
 date: 2019-02-15T15:23:00.400Z
-cover: /assets/20190215/2019021501.jpg
+cover: 20190215/2019021501.jpg
 slug: 20190215-onepiece
 category: 원피스
 tags:
   - 애니
   - 만화
+backgroundPosition:
 ---
 <div><p class="source">출처: <a href="http://viper.2ch.sc/test/read.cgi/news4vip/1543642389/" target="_blank" rel="noopener nofollow noreferrer">http://viper.2ch.sc/test/read.cgi/news4vip/1543642389/</a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">JHVScL/S0.net</span> <span title="2018/12/01(土) 14:33:09.981">2018/12/01 14:33</span></div><div style="padding-top: 10px;"><p class="content">왜인가<br><span class="jp">何故なのか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">3. ID: <span>hSUBYoDqp.net</span> <span title="2018/12/01(土) 14:34:06.906">2018/12/01 14:34</span></div><div style="padding-top: 10px;"><p class="content">샹크스의 강함이란건 수상한거긴 하지만
 전투 씬 없기도하고<br><span class="jp">シャンクスの強さなんて怪しいもんだけどな
