--- a/content/2019-02-16-semenya.md
+++ b/content/2019-02-16-semenya.md
@@ -1,12 +1,13 @@
 ---
 title: 여자 육상 세메냐 형님 「생물학상은 남성」으로 인정되다
 date: 2019-02-16T15:23:00.400Z
-cover: /assets/20190216/2019021601.jpg
+cover: 20190216/2019021601.jpg
 slug: 20190216-semenya
 category: 국제
 tags:
   - 뉴스
   - 스포츠
+backgroundPosition: 30%
 ---
 <div><p class="source">출처: <a href="http://tomcat.2ch.sc/test/read.cgi/livejupiter/1550191042/" target="_blank" rel="noopener nofollow noreferrer">http://tomcat.2ch.sc/test/read.cgi/livejupiter/1550191042/</a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">OuhoQK4ea.net</span> <span title="2019/02/15(金) 09:37:22.58">2019/02/15 09:37</span></div><div style="padding-top: 10px;">
 
