--- a/content/2019-02-08-hikakin.md
+++ b/content/2019-02-08-hikakin.md
@@ -1,11 +1,12 @@
 ---
 title: 【비보】히카킨이 이사 동영상 업로드 → 바로 특정되버리는
 date: 2019-02-08T15:23:00.400Z
-cover: /assets/20190208/20190208-hikakin1.jpg
+cover: 20190208/20190208-hikakin1.jpg
 slug: 20190208-hikakin
 category: 유튜브
 tags:
   - 유튜브
+backgroundPosition:
 ---
 <div><p class="source">출처: <a href="http://tomcat.2ch.sc/test/read.cgi/livejupiter/1549554711" rel="nofollow noopener noreferrer" target="_blank"><span>http</span><span>://</span><span>tomcat</span><span>.</span><span>2ch</span><span>.</span><span>sc</span><span>/</span><span>test</span><span>/</span><span>read</span><span>.</span><span>cgi</span><span>/</span><span>livejupiter</span><span>/</span><span>1549554711</span></a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">qLrF5+9F0.net</span> <span title="2019/02/08(金) 00:51:51.71">2019/02/08 00:51</span></div><div style="padding-top: 10px;">
 
