--- a/content/2019-02-13-abe.md
+++ b/content/2019-02-13-abe.md
@@ -1,12 +1,13 @@
 ---
 title: 아베수상 「스마트폰 갖고있지 않다」
 date: 2019-02-13T15:23:00.400Z
-cover: /assets/20190213/2019021301.jpg
+cover: 20190213/2019021301.jpg
 slug: 20190213-abe
 category: 정치
 tags:
   - 뉴스
   - 정치
+backgroundPosition: 23%
 ---
 <div><p class="source">출처: <a href="http://ai.2ch.sc/test/read.cgi/newsplus/1549957982/" target="_blank" rel="noopener nofollow noreferrer">http://ai.2ch.sc/test/read.cgi/newsplus/1549957982/</a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">H+aBVYdh9.net</span> <span title="2019/02/12(火) 16:53:02.24">2019/02/12 16:53</span></div><div style="padding-top: 10px;"><p class="content">「사쿠라다 요시타카 올림픽 담당상은 갖고있지만, 나는 스마트폰을 갖고있지 않다」.
 아베 신조 수상은 12일 중의원 예산위원회에서, 소비세증세에 따른 경기대책이 될 캐시리스<sup>(Cashless)</sup>결제의 포인트 환원을 둘러싼 질의 중, 이같이 밝혔다.
