--- a/content/2019-02-13-abe.md
+++ b/content/2019-02-13-abe.md
@@ -24,7 +24,7 @@ backgroundPosition: 23%
 スマホも持ってない人間に総理が務まるかと攻めるかな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">49. ID: <span>I9WNpFVO0.net</span> <span title="2019/02/12(火) 17:03:42.59">2019/02/12 17:03</span></div><div style="padding-top: 10px;"><p class="content">트럼프보다 훨씬 어린데 못 쓰는거야?<br><span class="jp">トランプよりずっと年下なのに使えないの？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">55. ID: <span>1VxTevxU0.net</span> <span title="2019/02/12(火) 17:04:36.33">2019/02/12 17:04</span></div><div style="padding-top: 10px;"><p class="content">나라의 톱은 스마트폰따위 가지지 않는 편이 좋아<br><span class="jp">国のトップはスマホなんか持たない方がいいよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">63. ID: <span>6EcO297M0.net</span> <span title="2019/02/12(火) 17:06:03.44">2019/02/12 17:06</span></div><div style="padding-top: 10px;"><p class="content">「USB를 모른다」
 「스마트폰 갖고있지 않다」
 일반인 「뭐?<sup>(は?)</sup>」
-넷우익「그게 정답! 사스가 자민당! 야당보다 낫다! 일본반자이!!!!」<br><span class="jp">「USBがわからない」
+네토우요<sup>(넷우익)</sup>「그게 정답! 사스가 자민당! 야당보다 낫다! 일본반자이!!!!」<br><span class="jp">「USBがわからない」
 「スマホ持ってない」
 一般人「は?」
 ネトウヨ「それが正解!流石自民党!野党よりマシ!日本万歳!!!!」</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">67. ID: <span>LzRs+M6n0.net</span> <span title="2019/02/12(火) 17:07:10.54">2019/02/12 17:07</span></div><div style="padding-top: 10px;"><p class="content">스마트폰이여도 피처폰이여도 미국에 도청당하고있지만w<br><span class="jp">スマホでもガラケーでも米国に盗聴されてるけどなw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">82. ID: <span>j/OuuqEw0.net</span> <span title="2019/02/12(火) 17:10:36.66">2019/02/12 17:10</span></div><div style="padding-top: 10px;"><p class="content">사실은 갖고있어도 「갖고있지 않습니다」라고 대답하는 것이 적절
