--- a/content/2019-02-22-simiken.md
+++ b/content/2019-02-22-simiken.md
@@ -63,7 +63,7 @@ AV 남배우를 시작해 20년.
 ・校長は自身の冊子で「政府のODAは中間搾取のため末端には行き渡らない。末端に生きた金をばら撒くべき」と主張していた
 ・校長が買春で使った総額は一国のODAとほぼ同額だった
 ・校長が本格的に女の子を買い始めた3年後からフィリピン女性の日本留学が増え始め逮捕された2015年がピークとなった
-・「長年に渡りフィリピン国民に多額の援助と読み書きを教育してくれている一個人への感謝状」が日本の領事館に届き、その一個人を探したところ校長があぶり出され買春が発覚し逮捕となった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">59. ID: <span>i71DeYZ20.net</span> <span title="2017/09/06(水) 23:41:19.81">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">교장보다 부러운 인생이란건 없어 시발<br><span class="jp">校長より羨ましい人生なんかねえよクソ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">65. ID: <span>WAbFUuqTr.net</span> <span title="2017/09/06(水) 23:42:15.43">2017/09/06 23:42</span></div><div style="padding-top: 10px;"><p class="content">AV와는 다르잖아
+・「長年に渡りフィリピン国民に多額の援助と読み書きを教育してくれている一個人への感謝状」が日本の領事館に届き、その一個人を探したところ校長があぶり出され買春が発覚し逮捕となった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">59. ID: <span>i71DeYZ20.net</span> <span title="2017/09/06(水) 23:41:19.81">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">교장보다 부러운 인생이란건 없어 시발(クソ)<br><span class="jp">校長より羨ましい人生なんかねえよクソ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">65. ID: <span>WAbFUuqTr.net</span> <span title="2017/09/06(水) 23:42:15.43">2017/09/06 23:42</span></div><div style="padding-top: 10px;"><p class="content">AV와는 다르잖아
 비유하자면 입장료 받는 조어 낚시터에서 「1만마리 낚았습니다!」같은 거야 교장은 난바다에서 대물을 1만마리니깐
 전혀 달라<br><span class="jp">AVとは違うやろ
 例えるなら入場料取る釣り堀で「1万匹釣りました！」みたいなもんやん 校長は沖合で大物を1万匹だからな
