.jp effecient css selector, IE media query, small markdown changes

--- a/content/2019-02-22-simiken.md
+++ b/content/2019-02-22-simiken.md
@@ -10,14 +10,15 @@ backgroundPosition: 30%
 ---
 <div><p class="source">출처: <a href="http://tomcat.2ch.sc/test/read.cgi/livejupiter/1504708485" target="_blank" rel="noopener nofollow noreferrer">http://tomcat.2ch.sc/test/read.cgi/livejupiter/1504708485</a></p><br><label for="twolang" style="font-weight: 550;">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">tWiDeCMO0.net</span> <span title="2017/09/06(水) 23:34:45.91">2017/09/06 23:34</span></div><div style="padding-top: 10px;"><blockquote class="twitter-tweet" data-lang="en"><p lang="ja" dir="ltr">38才になりました。<br><br>AV男優を初めて20年。<br>経験人数はもう少しで１万人。<br><br>この経験が役立つような活動をしていきたいと思います。<br><br>(まさか、こんなになるとはねぇ。。<br>夢にも思わなかったよ。いや、まだ夢の中か。仕事に夢中だから。)<br><br>これからもよろしくお願いいたします！😉</p>&mdash; AV男爵しみけん (@avshimiken) <a href="https://twitter.com/avshimiken/status/903271531878289409?ref_src=twsrc%5Etfw">August 31, 2017</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<p class="content">AV남작 시미켄 @avshimiken<br>
+<p class="content">AV남작 시미켄
+@avshimiken<br>
 38살이 되었습니다.<br>
 AV 남배우를 시작해 20년.
 경험인수는 조금 더 있으면 1만 명.<br>
 이 경험이 도움이 되는 활동을 해 나가고 싶다고 생각합니다.<br>
 (설마, 이렇게 될거라고는..
-꿈에도 생각못했어. 아니, 아직 꿈속(夢の中)인가? 일에 열중(夢中)하니까.)
-앞으로도 잘 부탁드립니다!😉</p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">4. ID: <span>TO3R70yKp.net</span> <span title="2017/09/06(水) 23:35:17.65">2017/09/06 23:35</span></div><div style="padding-top: 10px;"><p class="content">시미켄 싫어<br><span class="jp">しみけんきらい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>nmH50Dwn0.net</span> <span title="2017/09/06(水) 23:35:34.70">2017/09/06 23:35</span></div><div style="padding-top: 10px;"><p class="content">18부터 하고 있는건가<br><span class="jp">18からやってんのか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>QQuE3sqiM.net</span> <span title="2017/09/06(水) 23:36:14.83">2017/09/06 23:36</span></div><div style="padding-top: 10px;"><p class="content">부업인 교장에 지는 허접<br><span class="jp">副業の校長に負ける雑魚</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">50. ID: <span class="op">tWiDeCMO0.net</span> <span title="2017/09/06(水) 23:40:14.29">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">레전드</p>
+꿈에도 생각못했어. 아니, 아직 꿈속<sup>(夢の中)</sup>인가? 일에 열중<sup>(夢中)</sup>하니까.)
+앞으로도 잘 부탁드립니다!😉</p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">4. ID: <span>TO3R70yKp.net</span> <span title="2017/09/06(水) 23:35:17.65">2017/09/06 23:35</span></div><div style="padding-top: 10px;"><p class="content">시미켄 싫어<br><span class="jp">しみけんきらい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>nmH50Dwn0.net</span> <span title="2017/09/06(水) 23:35:34.70">2017/09/06 23:35</span></div><div style="padding-top: 10px;"><p class="content">18부터 하고 있는건가<br><span class="jp">18からやってんのか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>QQuE3sqiM.net</span> <span title="2017/09/06(水) 23:36:14.83">2017/09/06 23:36</span></div><div style="padding-top: 10px;"><p class="content">부업인 교장에 지는 허접<sup>雑魚</sup><br><span class="jp">副業の校長に負ける雑魚</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">50. ID: <span class="op">tWiDeCMO0.net</span> <span title="2017/09/06(水) 23:40:14.29">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">레전드</p>
 
 ![교장](/assets/20190222/2019022203.jpg "교장")
 
@@ -42,7 +43,7 @@ AV 남배우를 시작해 20년.
 校長を嘘で抜こうとするなら殺すぞ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">51. ID: <span>oskBHJWx0.net</span> <span title="2017/09/06(水) 23:40:27.14">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">레전드 때문에 전국 교장의 평균 음행<sup>(음란한 행위)</sup>인수가 2.3명<br><span class="jp">レジェンドのせいで全国の校長の平均淫行人数が2.3人</span> </p></div><div class="content2"><div class="id">57. ID: <span>OEvS7KOLa.net</span> <span title="2017/09/06(水) 23:41:10.85">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">역시 평균치라는건 무능하네<br><span class="jp">やっぱり平均値って無能だわ</span> </p></div></div><div class="content2"><div class="id">81. ID: <span>s9M4bysg0.net</span> <span title="2017/09/06(水) 23:44:02.62">2017/09/06 23:44</span></div><div style="padding-top: 10px;"><p class="content">웃음<br><span class="jp">草</span> </p></div></div><div class="content2"><div class="id">159. ID: <span>lW8mbyfc0.net</span> <span title="2017/09/06(水) 23:55:27.26">2017/09/06 23:55</span></div><div style="padding-top: 10px;"><p class="content">교장이란 외설적인 직업이네요 환멸했어요<br><span class="jp">校長って卑猥な職業なんですね幻滅しました</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">54. ID: <span>LezPs7sZ0.net</span> <span title="2017/09/06(水) 23:40:46.11">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">이건 횟수잖아? 같은 여배우와 마구 해도 카운트 되지 않는다고<br><span class="jp">これは回数だろ？ 同じ女優とやりまくってもカウントされないぞ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">56. ID: <span>eWDDkw0k0.net</span> <span title="2017/09/06(水) 23:41:05.47">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">교장의 위업
 ・매춘한 인수 12660명
 ・교장은 시세의 3배의 금액을 여자아이에게 지불하고 있었다
-・교장은 그와는 별도로 여자아이에게 학비지원도 하고 있었다
+・교장은 그와는 별도로 여자아이에게 학비원조도 하고 있었다
 ・교장은 여자아이들에게 성병의 특효약을 다수 갖춰서 주고 있었다.
 ・교장은 여자아이를 수배하는 브로커로부터의 신뢰도 두터웠다
 ・교장이 여자아이와 브로커에게 지불하는 매춘의 금액의 시세를 올린 것으로 악질 손님이 줄어 필리핀의 매춘이 줄었다
@@ -63,7 +64,7 @@ AV 남배우를 시작해 20년.
 ・校長は自身の冊子で「政府のODAは中間搾取のため末端には行き渡らない。末端に生きた金をばら撒くべき」と主張していた
 ・校長が買春で使った総額は一国のODAとほぼ同額だった
 ・校長が本格的に女の子を買い始めた3年後からフィリピン女性の日本留学が増え始め逮捕された2015年がピークとなった
-・「長年に渡りフィリピン国民に多額の援助と読み書きを教育してくれている一個人への感謝状」が日本の領事館に届き、その一個人を探したところ校長があぶり出され買春が発覚し逮捕となった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">59. ID: <span>i71DeYZ20.net</span> <span title="2017/09/06(水) 23:41:19.81">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">교장보다 부러운 인생이란건 없어 시발(クソ)<br><span class="jp">校長より羨ましい人生なんかねえよクソ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">65. ID: <span>WAbFUuqTr.net</span> <span title="2017/09/06(水) 23:42:15.43">2017/09/06 23:42</span></div><div style="padding-top: 10px;"><p class="content">AV와는 다르잖아
+・「長年に渡りフィリピン国民に多額の援助と読み書きを教育してくれている一個人への感謝状」が日本の領事館に届き、その一個人を探したところ校長があぶり出され買春が発覚し逮捕となった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">59. ID: <span>i71DeYZ20.net</span> <span title="2017/09/06(水) 23:41:19.81">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">교장보다 부러운 인생이란건 없어 시발<sup>(クソ)</sup><br><span class="jp">校長より羨ましい人生なんかねえよクソ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">65. ID: <span>WAbFUuqTr.net</span> <span title="2017/09/06(水) 23:42:15.43">2017/09/06 23:42</span></div><div style="padding-top: 10px;"><p class="content">AV와는 다르잖아
 비유하자면 입장료 받는 조어 낚시터에서 「1만마리 낚았습니다!」같은 거야 교장은 난바다에서 대물을 1만마리니깐
 전혀 달라<br><span class="jp">AVとは違うやろ
 例えるなら入場料取る釣り堀で「1万匹釣りました！」みたいなもんやん 校長は沖合で大物を1万匹だからな
@@ -107,6 +108,6 @@ AV 남배우를 시작해 20년.
 4년의 집행 유예가 됐어<br><span class="jp">2015/12/25のクリスマスに判決が出て
 4年の執行猶予ついたで</span> </p></div><div class="content2"><div class="id">150. ID: <span>QvQc7WRr0.net</span> <span title="2017/09/06(水) 23:54:27.70">2017/09/06 23:54</span></div><div style="padding-top: 10px;"><p class="content">4년간 매춘 안하면 용서받는다는거?<br><span class="jp">四年間買春しなきゃ許されるってこと？</span> </p></div><div class="content2"><div class="id">158. ID: <span>a1q3FK210.net</span> <span title="2017/09/06(水) 23:55:25.09">2017/09/06 23:55</span></div><div style="padding-top: 10px;"><p class="content">애초에 교장은 매춘으로 잡히지 않았어
 사진만 남기지 않았더라면 무죄였다<br><span class="jp">そもそも校長は買春で捕まってないで
-写真さえ残さなきゃ無罪だった</span> </p></div></div><div class="content2"><div class="id">161. ID: <span>ErH+8FXfd.net</span> <span title="2017/09/06(水) 23:55:32.97">2017/09/06 23:55</span></div><div style="padding-top: 10px;"><p class="content">미성년 매춘이잖아<br><span class="jp">未成年買春やろ</span> </p></div></div></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">145. ID: <span>XBkFlAb20.net</span> <span title="2017/09/06(水) 23:53:17.15">2017/09/06 23:53</span></div><div style="padding-top: 10px;"><p class="content">원피스<span class="jp">ワンピース</span>![원피스](/assets/20190222/2019022204.jpg "원피스")(소녀의 사진 14만7600장) </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">146. ID: <span>Gbjn1gJI0.net</span> <span title="2017/09/06(水) 23:53:29.50">2017/09/06 23:53</span></div><div style="padding-top: 10px;"><p class="content">위대한 것 하는듯 한 트윗쳐해대고, 죽어라 밑바닥아<br><span class="jp">偉大なことしてるみたいなツイートしやがってしねや底辺</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">148. ID: <span>a1q3FK210.net</span> <span title="2017/09/06(水) 23:53:52.17">2017/09/06 23:53</span></div><div style="padding-top: 10px;"><p class="content">솔직히 교장 아무것도 나쁜 일 하지 않았지
+写真さえ残さなきゃ無罪だった</span> </p></div></div><div class="content2"><div class="id">161. ID: <span>ErH+8FXfd.net</span> <span title="2017/09/06(水) 23:55:32.97">2017/09/06 23:55</span></div><div style="padding-top: 10px;"><p class="content">미성년 매춘이잖아<br><span class="jp">未成年買春やろ</span> </p></div></div></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">145. ID: <span>XBkFlAb20.net</span> <span title="2017/09/06(水) 23:53:17.15">2017/09/06 23:53</span></div><div style="padding-top: 10px;"><p class="content">원피스<span class="jp">ワンピース</span>![원피스](/assets/20190222/2019022204.jpg "원피스")<sup>(소녀의 사진 14만7600장)</sup> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">146. ID: <span>Gbjn1gJI0.net</span> <span title="2017/09/06(水) 23:53:29.50">2017/09/06 23:53</span></div><div style="padding-top: 10px;"><p class="content">위대한 것 하는듯 한 트윗쳐해대고, 죽어라 밑바닥아<br><span class="jp">偉大なことしてるみたいなツイートしやがってしねや底辺</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">148. ID: <span>a1q3FK210.net</span> <span title="2017/09/06(水) 23:53:52.17">2017/09/06 23:53</span></div><div style="padding-top: 10px;"><p class="content">솔직히 교장 아무것도 나쁜 일 하지 않았지
 교장 비판하는 녀석은 감정론에 지나지 않는다<br><span class="jp">正直校長なんも悪いことしてないよな
 校長批判してるやつは感情論でしかない</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">160. ID: <span>txRQi94c0.net</span> <span title="2017/09/06(水) 23:55:31.75">2017/09/06 23:55</span></div><div style="padding-top: 10px;"><p class="content">시미켄에 대해서 이야기하려고 생각했는데 교장 스레였다…<br><span class="jp">しみけんについて語ろうと思ったのに校長スレだったンゴ…</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">176. ID: <span>qCNuTDu60.net</span> <span title="2017/09/06(水) 23:56:52.33">2017/09/06 23:56</span></div><div style="padding-top: 10px;"><p class="content">성행위는 하고있지 않다 라는 명목인데 이녀석 외설죄로 잡히는거 아냐?<br><span class="jp">性行為はしていないという建前なのにコイツわいせつ罪で捕まるんじゃね？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">180. ID: <span>M7Cllcsa0.net</span> <span title="2017/09/06(水) 23:57:25.30">2017/09/06 23:57</span></div><div style="padding-top: 10px;"><p class="content">교장은 신<br><span class="jp">校長は神</span> </p></div></div></div></div>
