gatsby-config.js service worker offline support config, package.json update, PostSuggestion.scss update

--- a/content/2019-02-22-simiken.md
+++ b/content/2019-02-22-simiken.md
@@ -22,7 +22,7 @@ AV 남배우를 시작해 20년.
 
 ![교장](/assets/20190222/2019022203.jpg "교장")
 
-<span class="jp">レジェンド![교장](/assets/20190222/2019022202.jpg "교장")</span></div><div class="content2"><div class="id">53. ID: <span>OEvS7KOLa.net</span> <span title="2017/09/06(水) 23:40:43.48">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">너무 강하다<br><span class="jp">強すぎ</span> </p></div></div><div class="content2"><div class="id">55. ID: <span>GBMvQyvl0.net</span> <span title="2017/09/06(水) 23:40:47.62">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">폭이 너무 넓다<br><span class="jp">幅が広すぎる</span> </p></div><div class="content2"><div class="id">61. ID: <span>TO3R70yKp.net</span> <span title="2017/09/06(水) 23:41:20.89">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">박애주의란다<br><span class="jp">博愛主義やぞ</span> </p></div></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>WUiPP2Pn0.net</span> <span title="2017/09/06(水) 23:36:18.18">2017/09/06 23:36</span></div><div style="padding-top: 10px;"><p class="content">일로 하고있다든지 노 카운트잖아
+<span class="jp">レジェンド![교장](/assets/20190222/2019022202.jpg "교장")</span></div><div class="content2"><div class="id">53. ID: <span>OEvS7KOLa.net</span> <span title="2017/09/06(水) 23:40:43.48">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">너무 강해<br><span class="jp">強すぎ</span> </p></div></div><div class="content2"><div class="id">55. ID: <span>GBMvQyvl0.net</span> <span title="2017/09/06(水) 23:40:47.62">2017/09/06 23:40</span></div><div style="padding-top: 10px;"><p class="content">폭이 너무 넓다<br><span class="jp">幅が広すぎる</span> </p></div><div class="content2"><div class="id">61. ID: <span>TO3R70yKp.net</span> <span title="2017/09/06(水) 23:41:20.89">2017/09/06 23:41</span></div><div style="padding-top: 10px;"><p class="content">박애주의란다<br><span class="jp">博愛主義やぞ</span> </p></div></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>WUiPP2Pn0.net</span> <span title="2017/09/06(水) 23:36:18.18">2017/09/06 23:36</span></div><div style="padding-top: 10px;"><p class="content">일로 하고있다든지 노 카운트잖아
 교장은 자기 부담으로 자선 사업이라고<br><span class="jp">仕事でやってるとかノーカンやろ
 校長は自腹で慈善事業やぞ</span> </p></div><div class="content2"><div class="id">38. ID: <span>dViIO9wr0.net</span> <span title="2017/09/06(水) 23:38:51.75">2017/09/06 23:38</span></div><div style="padding-top: 10px;"><p class="content">이거지
 카운트 방법이 비겁
