--- a/content/2019-03-30-av-mother.md
+++ b/content/2019-03-30-av-mother.md
@@ -1,5 +1,5 @@
 ---
-title: 섹시 여배우의 모친 「자랑스러운 딸이 아니다」→딸 오열
+title: 섹시 여배우의 모친 「자랑스러운 딸은 아니다」→딸 오열
 date: 2019-03-30T15:23:00.400Z
 cover: 20190330/2019033001.png
 slug: 20190330-av-mother
@@ -38,7 +38,7 @@ backgroundPosition: 40%
 어느 정도 관리가 확실한 AV사무소에서 AV 하는 편이 나을지도 몰라
 AV 나오는 듯한 녀석이니까 풍속이나 만남계<sup>(出会い系)</sup>에 빠져있었을 가능성은 격하게 높고<br><span class="jp">まぁ変に看護士やって風俗や出会い系にハマるよりは
 ある程度管理がしっかりしてるAV事務所でAVやる方がマシかもしれん
-AV出るような奴やから風俗か出会い系にハマってた可能性は激高やし</span> </p></div><div class="content2"><div class="id">72. ID: <span>LdiHO9dS0.net</span> <span title="2019/03/27(水) 16:02:03.90">2019/03/27 16:02</span></div><div style="padding-top: 10px;"><p class="content">일생 영상으로 남지만말야 그래서 인생 다시 고치려고 해도 계속 AV여배우의 직함이 따라붙는다<br><span class="jp">一生映像に残るけどなそれで人生やり直そうとしてもずっとAV女優の肩書きが付いて回る</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">69. ID: <span>ln8hclmtd.net</span> <span title="2019/03/27(水) 16:01:39.43">2019/03/27 16:01</span></div><div style="padding-top: 10px;"><p class="content">그래도 오노우에 와카바 의사와 결혼했고 승자<sup>(勝ち組)</sup>잖아<br><span class="jp">でも尾上若葉医者と結婚してるし勝ち組やろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">73. ID: <span>ciQJABFHd.net</span> <span title="2019/03/27(水) 16:02:13.35">2019/03/27 16:02</span></div><div style="padding-top: 10px;"><p class="content">유마칭<sup>(아사미 유마)</sup>은 부모가 출연작을 주변에 나눠주신 것 같던데<br><span class="jp">ゆまちんは親が出演作を周りに配ってたらしいが</span> </p></div><div class="content2"><div class="id">77. ID: <span>XDpdtdSfM.net</span> <span title="2019/03/27(水) 16:02:57.03">2019/03/27 16:02</span></div><div style="padding-top: 10px;"><p class="content">부모님과 친구가 되고 싶었다<br><span class="jp">親と友達になりたかった</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">79. ID: <span>arCeYrXkd.net</span> <span title="2019/03/27(水) 16:03:22.55">2019/03/27 16:03</span></div><div style="padding-top: 10px;"><p class="content">아오이 소라 라는 아이를 낳자마자 레이블이 전 작품을 삭제하는 레전드 여배우<br><sup>(관련 기사내용: J캐스트뉴스 등 일본 언론들은 27일 기사를 통해 5년이 경과된 아오이 소라의 작품은 더 이상 구입할 수 없게 됐다고 보도했다. 발매 5년이 넘은 아오이 소라의 AV타이틀을 더 이상 팔지 말아달라고 소속사가 공식 신청한 결과다. 아오이 소라의 소속사는 매체에 "출산을 배려했다"며 판매 중지 신청의 배경을 설명했다. 이에 따라 각종 판매 사이트에서 아오이 소라의 영상물이 점차 사라지고 있다고 보도는 전했다.)</sup><br><span class="jp">蒼井そらとかいう子供産んだとたんレーベルが全作品を削除するレジェンド女優</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">84. ID: <span>EYfUVB2Ep.net</span> <span title="2019/03/27(水) 16:04:11.22">2019/03/27 16:04</span></div><div style="padding-top: 10px;"><p class="content">말할 정도로 자식 신경 쓸까?
+AV出るような奴やから風俗か出会い系にハマってた可能性は激高やし</span> </p></div><div class="content2"><div class="id">72. ID: <span>LdiHO9dS0.net</span> <span title="2019/03/27(水) 16:02:03.90">2019/03/27 16:02</span></div><div style="padding-top: 10px;"><p class="content">일생 영상으로 남지만말야 그래서 인생 다시 고치려고 해도 계속 AV여배우의 직함이 따라붙는다<br><span class="jp">一生映像に残るけどなそれで人生やり直そうとしてもずっとAV女優の肩書きが付いて回る</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">69. ID: <span>ln8hclmtd.net</span> <span title="2019/03/27(水) 16:01:39.43">2019/03/27 16:01</span></div><div style="padding-top: 10px;"><p class="content">그래도 오노우에 와카바 의사와 결혼했고 승자<sup>(勝ち組)</sup>잖아<br><span class="jp">でも尾上若葉医者と結婚してるし勝ち組やろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">73. ID: <span>ciQJABFHd.net</span> <span title="2019/03/27(水) 16:02:13.35">2019/03/27 16:02</span></div><div style="padding-top: 10px;"><p class="content">유마칭<sup>(아사미 유마)</sup>은 부모가 출연작을 주변에 나눠주신 것 같던데<br><span class="jp">ゆまちんは親が出演作を周りに配ってたらしいが</span> </p></div><div class="content2"><div class="id">77. ID: <span>XDpdtdSfM.net</span> <span title="2019/03/27(水) 16:02:57.03">2019/03/27 16:02</span></div><div style="padding-top: 10px;"><p class="content">부모님과 친구가 되고 싶었다<br><span class="jp">親と友達になりたかった</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">79. ID: <span>arCeYrXkd.net</span> <span title="2019/03/27(水) 16:03:22.55">2019/03/27 16:03</span></div><div style="padding-top: 10px;"><p class="content">아오이 소라 라는 아이를 낳자마자 레이블이 전 작품을 삭제하는 레전드 여배우<br><sup>(역주: 관련 기사내용: J캐스트뉴스 등 일본 언론들은 27일 기사를 통해 5년이 경과된 아오이 소라의 작품은 더 이상 구입할 수 없게 됐다고 보도했다. 발매 5년이 넘은 아오이 소라의 AV타이틀을 더 이상 팔지 말아달라고 소속사가 공식 신청한 결과다. 아오이 소라의 소속사는 매체에 "출산을 배려했다"며 판매 중지 신청의 배경을 설명했다. 이에 따라 각종 판매 사이트에서 아오이 소라의 영상물이 점차 사라지고 있다고 보도는 전했다.)</sup><br><span class="jp">蒼井そらとかいう子供産んだとたんレーベルが全作品を削除するレジェンド女優</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">84. ID: <span>EYfUVB2Ep.net</span> <span title="2019/03/27(水) 16:04:11.22">2019/03/27 16:04</span></div><div style="padding-top: 10px;"><p class="content">말할 정도로 자식 신경 쓸까?
 엄마가 AV 나오고 있어도 아는사람에게 걸리지 않는 한 아무렇게도 생각 안하잖아<br><span class="jp">言うほど子供気にするか？
 母親がAV出てても知り合いにバレんかぎり何とも思わんやろ</span> </p></div><div class="content2"><div class="id">91. ID: <span>nVJAUj1Zd.net</span> <span title="2019/03/27(水) 16:05:23.46">2019/03/27 16:05</span></div><div style="padding-top: 10px;"><p class="content">부모의 심경으로는
 자식에게 자신의 진실을 전하지 못하는 것은 매우 괴롭다고 생각해<br><span class="jp">親の心境としては
